# cold-arc

./: .gitignore  .gitmodules  Archive.cpp  Archive.h  ArchiveSettings.cpp  ArchiveSettings.h  ArchiveSettingsDialog.cpp  ArchiveSettingsDialog.h  CMakeLists.txt  ContentsModelColumns.h  DeleteDialog.cpp  DeleteDialog.h  Dispatcher.cpp  Dispatcher.h  ErrorBox.cpp  ErrorBox.h  Exceptions.h  ExportDialog.cpp  ExportDialog.h  ExportModelColumns.h  FileStream.c  FileStream.h  FolderModelColumns.cpp  FolderModelColumns.h  HistoryDialog.cpp  HistoryDialog.h  HistoryModelColumns.h  ISOBuilder.cpp  ISOBuilder.h  MainWindow.cpp  MainWindow.h  MediaListColumns.h  MediaView.cpp  MediaView.h  NewFolderDialog.cpp  NewFolderDialog.h  NewMediaDialog.cpp  NewMediaDialog.h  ProgressInfo.cpp  ProgressInfo.h  (+27 more)
.github/workflows/: cmake-single-platform.yml
Docker/: Dockerfile  Makefile
flatpak/: coldArc.flatpakrepo  so.ldd.ColdArc.metainfo.xml  so.ldd.Coldarc.desktop  so.ldd.Coldarc.json  so.ldd.Coldarc.metainfo.xml
res/: #glade.glade#  deletedlg.glade  err.css  err.glade  export.glade  glade.glade  history.glade  newfolder.glade  newmedia.glade  progress.glade  resources.xml  settings.glade  skeleton_db.sql  updlg.glade  uploaddialog.glade
